Tue Jan 17 12:32:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (aligned_malloc, aligned_free): covered missing defined
	  operators and fixes for cygwin.

Tue Jan 17 10:54:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (do_hash): it's the time to remove cast to unsigned int.

Tue Jan 17 07:30:12 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* st.c (unpack_entries): Fix r34310: on unpacking, the position of
	  a hash must be do_hash-ed value.

	* st.c (add_packed_direct): ditto.

Mon Jan 16 16:41:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (Regexp): fix incorrect options when casting to
	  a Regexp, and suppress encoding option warnings.
	  https://github.com/ruby/ruby/pull/82

Mon Jan 16 11:22:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_chsize): no need to get the current file size.

Mon Jan 16 00:41:33 2012  Sokolov Yura  <funny.falcon@gmail.com>

	* st.c: st use function instead of macro.  In my current
	  environment (Ubunu 11.04 32bit gcc-4.5.2) it gives 4%
	  performance improvement.

	  https://github.com/ruby/ruby/pull/77

Sun Jan 15 14:09:48 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* object.c (rb_inspect): raise the result is not compatible with
	  the default external encoding. [ruby-core:42095] [Bug #5848]
	  If the default external encoding is ASCII compatible, the encoding of
	  inspected result must be compatible with it.
	  If the default external encoding is ASCII incomapatible,
	  the result must be ASCII only.

Sun Jan 15 13:21:50 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/parser/parser.rl (json_string_unescape): workaround fix
	  for over optimization of GCC 4.7. [ruby-core:42085] [Bug #5888]
	  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=51862

Sat Jan 14 22:24:09 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/callback/mkcallback.rb (gencallback): suppress unused
	  variables.

Sat Jan 14 21:56:43 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
