@@ -34,6 +34,7 @@
 
 #include "ruby.h"
 #include "ruby/util.h"
+#define compat_init_setproctitle ruby_init_setproctitle
 
 #ifndef HAVE_SETPROCTITLE
 
