@@ -1809,8 +1809,8 @@ ruby_process_options(int argc, char **argv)
 
 #ifndef HAVE_SETPROCTITLE
     {
-	extern void compat_init_setproctitle(int argc, char *argv[]);
-	compat_init_setproctitle(argc, argv);
+	extern void ruby_init_setproctitle(int argc, char *argv[]);
+	ruby_init_setproctitle(argc, argv);
     }
 #endif
 
